new portfolio updateXXxxX

--- a/_posts/2018-12-22-distill.md
+++ b/_posts/2018-12-22-distill.md
@@ -1,27 +1,12 @@
 ---
 layout: distill
-title: a distill-style blog post
-description: an example of a distill-style blog post and main elements
-tags: distill formatting
-giscus_comments: true
-date: 2021-05-22
+title: experiential learning
+description: self-tuning hearing aids at the applied hearing science lab
+tags: hi
+giscus_comments: false
+date: 2023-08-18
 featured: true
 
-authors:
-  - name: Albert Einstein
-    url: "https://en.wikipedia.org/wiki/Albert_Einstein"
-    affiliations:
-      name: IAS, Princeton
-  - name: Boris Podolsky
-    url: "https://en.wikipedia.org/wiki/Boris_Podolsky"
-    affiliations:
-      name: IAS, Princeton
-  - name: Nathan Rosen
-    url: "https://en.wikipedia.org/wiki/Nathan_Rosen"
-    affiliations:
-      name: IAS, Princeton
-
-bibliography: 2018-12-22-distill.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -30,17 +15,16 @@ bibliography: 2018-12-22-distill.bib
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
 toc:
-  - name: Equations
+  - name: Context
     # if a section has subsections, you can add them as follows:
     # subsections:
     #   - name: Example Child Subsection 1
     #   - name: Example Child Subsection 2
-  - name: Citations
-  - name: Footnotes
-  - name: Code Blocks
-  - name: Interactive Plots
-  - name: Layouts
-  - name: Other Typography?
+  - name: Goal
+  - name: Process
+  - name: Outcome
+  - name: Reflection
+  - name: Conclusion
 
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
@@ -62,70 +46,45 @@ _styles: >
 
 ---
 
-## Equations
+## Context
 
-This theme supports rendering beautiful math in inline and display modes using [MathJax 3](https://www.mathjax.org/) engine.
-You just need to surround your math expression with `$$`, like `$$ E = mc^2 $$`.
-If you leave it inside a paragraph, it will produce an inline expression, just like $$ E = mc^2 $$.
+I discovered the Applied Hearing Science Lab (AHSLAB) when I stumbled upon a posting for an independent study on the undergraduate research opportunities database. It was titled "Modeling Speech Perception through Cochlear Implants" and involved an intriguing blend of biology, computer science, and bioengineering. I worked on this project with a bioengineering student throughout Spring 2023 under Dr. Yi Shen, the head of the AHSLAB. Though intriguing, much of the project was explorative and self-directed, leaving myself and my labmate scratching our inexperienced heads. Furthermore, the project demanded the use of proprietary, often esoteric hardware and software with little documentation to guide us. While 
 
-To use display mode, again surround your expression with `$$` and place it as a separate paragraph.
-Here is an example:
-
-$$
-\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)
-$$
-
-Note that MathJax 3 is [a major re-write of MathJax](https://docs.mathjax.org/en/latest/upgrading/whats-new-3.0.html) that brought a significant improvement to the loading and rendering speed, which is now [on par with KaTeX](http://www.intmath.com/cg5/katex-mathjax-comparison.php).
+As Spring quarter drew to an end, I looked to shift projects within the lab. I received the opportunity to work on a mobile app built with modern technologies (TypeScript, React, Git) that I've covered in my degree coursework. Here, I would be working on an interdiscplinary team alongside students in Human Centered Design & Engineering, Speech & Hearing Sciences, and a fellow Computer Science major. The project is led by a Speech & Hearing Sciences PhD candidate, Bertan Kursun. I accepted and thus began my summer engagement.
 
 ***
 
-## Citations
+## Goal 
 
-Citations are then used in the article body with the `<d-cite>` tag.
-The key attribute is a reference to the id provided in the bibliography.
-The key attribute can take multiple ids, separated by commas.
+Traditionally, fitting hearing aids requires audiometric tests using specialized equipment, as well as fine tuning that may be conducted across several weeks. We aim to make this process more streamlined and accessible to the 85% of hearing-impaired Americans with unmet hearing healthcare needs. 
 
-The citation is presented inline like this: <d-cite key="gregor2015draw"></d-cite> (a number that displays more information on hover).
-If you have an appendix, a bibliography is automatically created and populated in it.
+How do we aim to accomplish this? Our lab has developed a mobile-based web app that allows patients to adjust settings on their own hearing aids, and fit their exact audiometric profile. This process is called "self-fitting". We aimed to make the app as accessible and easy to use as possible for elderly patients with less familiarity with modern software. 
 
-Distill chose a numerical inline citation style to improve readability of citation dense articles and because many of the benefits of longer citations are obviated by displaying more information on hover.
-However, we consider it good style to mention author last names if you discuss something at length and it fits into the flow well — the authors are human and it’s nice for them to have the community associate them with their work.
+When I joined the project, our application had one main fitting interface: a 5x5 grid across which users drag a cursor that adjusts the frequencies of their hearing aids. The user is taken through 20-ish trials of this grid, continuously dragging the cursor until the sound feels the best for them, which iteratively perfects their hearing.
+
+My goal throughout this summer was to implement a new fitting interface: a set of tappable buttons that each apply some certain adjustment to different frequencies on their hearing aids. Similarly to the grid interface, the user is taken through different trials, which iteratively imrpove their hearing aid experience. Aside from this new button interface, we wanted to give the app a total aesthetic redesign to make it both user-friendly for older patients and more presentable to potential funders of our lab. We aimed to host clinical trials for patients scheduled for the end of August, so our timeline was clearly defined. 
 
 ***
 
-## Footnotes
+## Process & Outcome
 
-Just wrap the text you would like to show up in a footnote in a `<d-footnote>` tag.
-The number of the footnote will be automatically generated.<d-footnote>This will become a hoverable footnote.</d-footnote>
+I'm really grateful to have been able to contribute to a project like this. It's not the first codebase I've worked on collaboratively, but I do feel that it's the first one that offers such a clear, tangible benefit to future users. All aspects of the project were clearly defined - the who, the what, the when, the why, and the how - which allowed me to focus in on the actual software development without worrying about project logistics. As I mentioned earlier, this is part of the reason I chose to join this project; it was so concretely defined by the time I joined, and it had an existing codebase for me to contribute to. I could start contributing immediately; I made my first pull request (code contribution) within my first week of joining, and I knew those changes would be included in the final version of the app. After Spring quarter's project filled with question marks and uncertainty, it was incredibly refreshing to work on something so concrete.   
 
-***
+Prior to this project, I had the misconception that the process of building software was far removed from the actual end users of that software. That is, I never believed that I'd be thinking about the *why* or the *who* when cranking out lines of code; I instead believed that writing code is purely analytical and mathematical. However, the reality was different. With each annoying bug I had to fix, every new feature I had to implement, and all the seemingly tedious aesthetic adjustments our team made, I envisioned elderly patients using our app and appreciating every last detail. Somehow, writing code began to have a degree of humanness and emotion involved, as I associated each function with a purpose in the larger goal of improving an older person's life. This notion is what made this project much more enjoyable to work on than the class projects in CSE 331. Though our self-fitting app involved virtually the same technology stack as CSE 331 projects, knowing that my hard work will be put towards more than just a GPA is such a significant motivator. From this takeaway, I've learned that I truly do care about what I build in the future, and whether I'm working in the industry, I will need to be truly aligned with my company's mission if I want to feel fulfilled in my work.  
 
-## Code Blocks
+While the scope of our app's target audience is limited to local patients of the UW Speech and Hearing Clinic, the work I did this summer felt incredibly rewarding. I felt that the strengths of mine that contributed the most to my success were my patience and willingness to learn. In engineering settings and, more broadly, research settings, the demands are constantly changing. I worked on entire features that we ended up havingn to scrap and completely redo simply because we decided another solution would be optimal. Keeping up with these changing minds and wanting to improve relentlessly required patience, which I .
 
-Syntax highlighting is provided within `<d-code>` tags.
-An example of inline code snippets: `<d-code language="html">let x = 10;</d-code>`.
-For larger blocks of code, add a `block` attribute:
-
-<d-code block language="javascript">
-  var x = 25;
-  function(x) {
-    return x * x;
-  }
-</d-code>
-
-**Note:** `<d-code>` blocks do not look good in the dark mode.
-You can always use the default code-highlight using the `highlight` liquid tag:
-
-{% highlight javascript %}
-var x = 25;
-function(x) {
-  return x * x;
-}
-{% endhighlight %}
+Another aspect of this project that I'm incredibly thankful for was the team's interdisciplinarity. I learned a ton from Bertan, the PhD student leading the project, about audiology and acoustics. He answered all my questions - even the shockingly obvious ones. Though he doesn't come directly from a computing background, I was surprised by his grasp on programmming and how he was able to switch seamlessly from thinking about the app's algorithm to its aesthetic design. We're also blessed to have Jason in our lab; he's a third-year computer science major and hands down the most talented, experienced developer I've directly worked with. He implemented basically the entirety of what was there when I joined this project. I learned a lot from him about using Git for version control, including merging changes and working across multiple branches.
 
 ***
 
-## Interactive Plots
+## Conclusion
+
+As of August 21st, 2023, and we're done with all main functional and aesthetic changes to the app. Last week, we did a rehearsal of a clinical trial, and made some last adjustments to the instructional pages. All that I worked on this summer can be seen at https://github.com/AHSLab-UW/self-fitting-gui. We have patients coming in in the coming weeks to tune their hearing aids with our app, and I'm satisfied and rewarded by the project. I hope to continue contributing to lab in the upcoming school year, whether it's the same project or a new one.
+
+***
+
+## Conclusion
 
 You can add interative plots using plotly + iframes :framed_picture:
 
